<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="title_activity_add_new_contact">AddNewContactActivity</string>
    <string name="title_activity_edit_contact">EditContact</string>
    <string name="first_name">First Name</string>
    <string name="surname">Last Name</string>
    <string name="company">Company</string>
    <string name="add_phone">Add a phone number</string>
    <string name="add_email">Add an email</string>
    <string name="add_address">Add an address</string>
    <string name="contact_list_search_hint">Search</string>
    <string name="dob">Date of birth</string>

</resources>
